# framekit

./: CHANGELOG.md  CITATION.cff  CMakeLists.txt  NOTICE  README.md  RELEASE_NOTES.md  REPO_POLICY.md  SECURITY.md
.github/ISSUE_TEMPLATE/: architecture-decision.yml  bug.yml  config.yml  experiment.yml  feature.yml  refactor.yml  technical-debt.yml
.github/workflows/: ci-cpp.yml  ci-master-promotion.yml  release-tag.yml
docs/: architecture.md  charter-v2.md  composition-matrix.md  error-policy-matrix.md  event-input-semantics.md  integration-boundary.md  lifecycle-semantics.md  loop-stage-graph-profiles.md  module-contract-dag-semantics.md  overview.md  platform-support-matrix.md  selective_linking.md  service-context-contract-freeze.md  v2-stable-contracts.md
docs/adr/: ADR-0001-service-context-model.md  ADR-0002-module-loading-model.md  ADR-0003-loop-profile-policy-model.md  ADR-0004-error-policy-model.md  README.md
docs/doctrine/: README.md  api-doc-contract-alignment-2026-03-29.md  dynamic-module-loader-contract-2026-03-30.md  execution-service-benchmark-baseline-2026-03-30.md  phase0-signoff-gate.md  post-release-roadmap-2026-03-29.md  project-board-workflow.md  release-playbook.md  repo-management.md
examples/frontend_backend/: backend_main.cpp  frontend_main.cpp
examples/multi_worker/: main.cpp
examples/single_process/: main.cpp
include/framekit/: application_spec.hpp  framekit.hpp  ipc_transport_kind.hpp  process_spec.hpp  process_topology.hpp
include/framekit/event/: bus.hpp
include/framekit/fault/: policy_runtime.hpp
include/framekit/input/: routing.hpp
include/framekit/ipc/: control_channel.hpp  data_plane.hpp  transport.hpp  transport_factory.hpp
include/framekit/kernel/: runtime.hpp
include/framekit/lifecycle/: hooks.hpp  state.hpp  state_machine.hpp
include/framekit/loop/: policy.hpp  stage_graph.hpp
include/framekit/module/: dynamic_loader.hpp  graph.hpp
include/framekit/multiprocess/: handshake.hpp  launcher.hpp  liveness.hpp  runtime.hpp  supervisor.hpp
include/framekit/platform/: host_runtime.hpp
include/framekit/runtime/: bootstrap_services.hpp  child_handshake.hpp  fault_policy_runtime.hpp  kernel_runtime.hpp  lifecycle_hooks.hpp  lifecycle_state_machine.hpp  liveness_policy.hpp  loop_policy.hpp  loop_stage_graph.hpp  multiprocess_runtime.hpp  platform_host_runtime.hpp  process_launcher.hpp  supervisor_policy.hpp
include/framekit/service/: bootstrap.hpp  context.hpp  execution.hpp
include/framekit/spec/: app_spec.hpp  process_role.hpp  process_spec.hpp  process_topology.hpp
include/framekit/window/: cocoa_backend.hpp  window_backend.hpp
src/: bootstrap_services.cpp  cocoa_platform_backend.mm  event_bus.cpp  fault_policy_runtime.cpp  input_routing_runtime.cpp  kernel_runtime.cpp  lifecycle_state_machine.cpp  loop_policy.cpp  loop_stage_graph.cpp  module_graph.cpp  multiprocess_runtime.cpp  platform_backend_factory_internal.hpp  platform_backend_factory_stub.cpp  platform_host_runtime.cpp
src/window/: cocoa_backend.mm  cocoa_backend_stub.cpp  window_backend.cpp
tests/: CMakeLists.txt  test_contracts.cpp  test_execution_service_benchmark.cpp  test_fault_policy_runtime.cpp  test_input_routing_runtime.cpp  test_loop_stage_graph.cpp  test_platform_host_runtime.cpp  test_platform_host_runtime_cocoa.cpp  test_runtime_contract_primitives.cpp  test_window_backend.cpp
